added root route and removed index.html

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -1,11 +1,12 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<title>We are working on it</title>
-	
-</head>
-<body>
-	<h1>We are working on it</h1>
-	<p>We are making some changes to eventicus at the moment. Please come back later and enjoy the new features!</p>
-	<p>Your hard working eventicus team</p>
-</body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
+  <head>
+    <title>Eventicus.de</title>
+  </head>
+  <body id="home">
+    <div style="text-align: center">
+      <img src="images/teaser.jpg" alt="Wir arbeiten an einer neuen Version..." />
+    </div>
+  </body>
 </html>
